--- a/repositoryImpl/src/main/resources/database.properties
+++ b/repositoryImpl/src/main/resources/database.properties
@@ -1,6 +1,6 @@
-url=jdbc:mysql://localhost/course?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+url=jdbc:mysql://mysql:3306/courses?allowPublicKeyRetrieval=true&useSSL=false
 db.username=root
-password=3717grom
+password=root
 dialectHB=hibernate.dialect
 dialectMSQL=org.hibernate.dialect.MySQL5Dialect
 showSQL=hibernate.show_sql
