--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
 
-  mysql:
+  db:
     image: mysql:latest
     environment:
       - MYSQL_ROOT_PASSWORD=root
@@ -12,16 +12,19 @@ services:
     volumes:
     - ./DB/UDEMYDBCOURS.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - 3306:3306
+      - 5432:5432
     networks:
       - backend
 
   ads-main:
     build: .
+    environment:
+      - JAVA_OPTS= -agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n
+      - PORT=5000
     depends_on:
-      - mysql
+      - db
     ports:
-      - 8080:8080
+      - 5000:5000
     networks:
       - backend
 
