--- a/repositoryImpl/src/main/resources/application.properties
+++ b/repositoryImpl/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 jwt.token.secret=$2y$04$GbqEw9Kxa2dS6AakR934iOqwb/61jCTEUpBRmTtNT8QUbm7QIinzO
 jwt.token.expired=3600000000
+server.port=${PORT:5000}
