--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
 
-  db:
+  mysql:
     image: mysql:latest
     environment:
       - MYSQL_ROOT_PASSWORD=root
@@ -10,9 +10,9 @@ services:
       - MYSQL_USER=user
       - MYSQL_PASSWORD=password
     volumes:
-    - ./DB/UDEMYDBCOURS.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./DB/UDEMYDBCOURS.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - 5432:5432
+      - 3306:3306
     networks:
       - backend
 
@@ -20,11 +20,11 @@ services:
     build: .
     environment:
       - JAVA_OPTS= -agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n
-      - PORT=5000
     depends_on:
-      - db
+      - mysql
     ports:
-      - 5000:5000
+      - 8080:8080
+      - 8000:8000
     networks:
       - backend
 
